--- a/css/dispatchgui.css
+++ b/css/dispatchgui.css
@@ -25,7 +25,7 @@ h6 {
 
 .btn-xl {
   text-transform: uppercase;
-  padding: 1.5rem 3rem;
+  padding: 1.5rem 4rem;
   font-size: 0.9rem;
   font-weight: 700;
   letter-spacing: 0.1rem;
@@ -44,7 +44,8 @@ header.masthead {
   overflow: hidden;
   padding-top: calc(7rem + 72px);
   padding-bottom: 7rem;
-  background: linear-gradient(0deg, #1F2123 0%, #36393F 100%);
+  /*background: linear-gradient(0deg, #1F2123 0%, #36393F 100%);*/
+  background: #1F2123;
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
@@ -53,6 +54,7 @@ header.masthead {
 
 header.masthead .masthead-content {
   z-index: 1;
+  
   position: relative;
 }
 
@@ -83,6 +85,10 @@ header.masthead .bg-circle {
   header.masthead .masthead-content .masthead-subheading {
     font-size: 4rem;
   }
+}
+
+.color-blue {
+  color: #7289DA !important;
 }
 
 .bg-primary {
